@@ -1,2 +1,0 @@
-CHOS=/etc/chos
-BINDMOUNT="/dev /dev/shm /dev/pts /sys /proc"
