@@ -5,8 +5,8 @@ m4_define(PROJECT_NAME,  [CHOS])
 m4_define(PROJECT_EMAIL, [chos@nersc.gov])
 m4_define(PROJECT_TAR,   [chos])
 m4_define(PROJECT_MAJOR, 0)
-m4_define(PROJECT_MINOR, 11)
-m4_define(PROJECT_MICRO, 2)
+m4_define(PROJECT_MINOR, 12)
+m4_define(PROJECT_MICRO, 0rc1)
 
 AC_INIT(PROJECT_NAME, PROJECT_MAJOR.PROJECT_MINOR.PROJECT_MICRO,
         PROJECT_EMAIL, PROJECT_TAR)
