@@ -1,4 +1,4 @@
-PACKAGE_VERSION="0.11.2"
+PACKAGE_VERSION="0.12.0rc1"
 
 # Items below here should not have to change with each driver version
 PACKAGE_NAME="chos"
