@@ -1,4 +1,4 @@
-securedir = $(SECUREDIR)
+securedir = ${FAKEROOT}$(SECUREDIR)
 secure_LTLIBRARIES = pam_chos.la
 pam_chos_la_SOURCES = pam_chos.c
 pam_chos_la_LIBADD = $(PAM_LIBS)
